<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JSON Weather</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Add new city</string>
    <string name="text_search">Search</string>
    <string name="text_refresh">Refresh</string>
    <string name="uri_provider">net.vmordo.weather.providers</string>
    <string name="text_hint_coord">lan lot</string>
    <string name="text_hint_sun">sunrise sunset</string>
    <string name="clear">Clear All</string>
    <string name="text_hint_press">pressure</string>
    <string name="text_hint_hum">humidity</string>
    <string name="text_hint_temp_min">temp. min</string>
    <string name="text_hint_temp_max">temp. max</string>
        
    
</resources>